--- a/views/simulator.html
+++ b/views/simulator.html
@@ -53,65 +53,19 @@
   function update(force = false) {
     // can't use for loop :(
 
-    var request1 = new XMLHttpRequest();
+    sendRequest('GET', '/ubi/index.php?fungsi=get_status&jml_arg=0&id_device=1', function (response) {
+      var res = JSON.parse(response);
+      var action = res.data.action == null ? 'standby' : res.data.action;
+      document.getElementById('device1').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
+    });
 
-    request1.open('GET', '/index.php?fungsi=get_status&jml_arg=0&id_device=1', true);
-    request1.onreadystatechange = function() {
-      if (this.readyState === 4) {
-        if (this.status >= 200 && this.status < 400) {
-          console.log('< [DEBUG] response - ' + this.responseText);
-          var res = JSON.parse(this.responseText);
-          var action = res.data.action == null ? 'standby' : res.data.action;
-          document.getElementById('device1').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
-        } else {
-          console.log('< [DEBUG] error');
-        }
-      }
-    };
+    sendRequest('GET', '/ubi/index.php?fungsi=get_status&jml_arg=0&id_device=2', function (response) {
+      var res = JSON.parse(response);
+      var action = res.data.action == null ? 'standby' : res.data.action;
+      document.getElementById('device2').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
+    });
 
-    request1.send();
-    request1 = null;
-
-    var request2 = new XMLHttpRequest();
-
-    request2.open('GET', '/index.php?fungsi=get_status&jml_arg=0&id_device=2', true);
-    request2.onreadystatechange = function() {
-      if (this.readyState === 4) {
-        if (this.status >= 200 && this.status < 400) {
-          console.log('< [DEBUG] response - ' + this.responseText);
-          var res = JSON.parse(this.responseText);
-          var action = res.data.action == null ? 'standby' : res.data.action;
-          document.getElementById('device2').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
-        } else {
-          console.log('< [DEBUG] error');
-        }
-      }
-    };
-
-    request2.send();
-    request2 = null;
-
-    var request3 = new XMLHttpRequest();
-
-    request3.open('GET', '/index.php?fungsi=get_status&jml_arg=0&id_device=3', true);
-    request3.onreadystatechange = function() {
-      if (this.readyState === 4) {
-        if (this.status >= 200 && this.status < 400) {
-          console.log('< [DEBUG] response - ' + this.responseText);
-          var res = JSON.parse(this.responseText);
-          console.log(res);
-          var action = res.data.action == null ? 'standby' : res.data.action;
-          document.getElementById('device3').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
-        } else {
-          console.log('< [DEBUG] error');
-        }
-      }
-    };
-
-    //request3.send();
-    //request3 = null;
-
-    sendRequest('GET', '/index.php?fungsi=get_status&jml_arg=0&id_device=3', function (response) {
+    sendRequest('GET', '/ubi/index.php?fungsi=get_status&jml_arg=0&id_device=3', function (response) {
       var res = JSON.parse(response);
       var action = res.data.action == null ? 'standby' : res.data.action;
       document.getElementById('device3').innerHTML = "<ul><li>File: " + res.data.file + "</li><li>Action: " + action + "</li><li>Volume: " + res.data.volume + "</li><li>Mute: " + res.data.mute + "</li></ul>";
